--- a/src/components/common/TableConstructor.scss
+++ b/src/components/common/TableConstructor.scss
@@ -11,7 +11,7 @@
   }
   .mainTable {
     border-collapse: collapse;
-    border: solid 1px #e6e6e6;
+    border: solid 1px #f9f9f9;
   }
 }
 
@@ -19,24 +19,26 @@
   .Row {
     border-collapse: separate;
     background-color: white;
-    border-bottom: solid 1px #e6e6e6;
-    .Data {
-      padding: 0;
+    border-bottom: solid 1px #f9f9f9;
 
+    .Data {
+      width: fit-content;
+      padding: 0;
+      cursor: pointer;
+      color: #646464;
+      padding: 0 0 0 0.5rem;
       .Content {
-        width: max-content;
+        width: 100%;
         height: 18px;
-        overflow: auto;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 0.5rem;
-        border-right: solid 1px #e6e6e6;
+        border-right: solid 1px #f9f9f9;
       }
-      cursor: pointer;
-      color: #646464;
+
       .filterIcon {
         font-size: 10px;
+        padding-right: 2px;
       }
       .text {
         font-size: 12px;
@@ -56,13 +58,14 @@
     color: #464646;
     .Data {
       padding: 0;
-      .BodyContent {
-        width: max-content;
-
-        height: 18px;
-      }
       font-size: 12px;
       padding: 0 0.5rem;
+      .BodyContent {
+        width: max-content;
+        display: flex;
+        align-items: center;
+        height: 18px;
+      }
     }
   }
   .Row:hover {
