--- a/src/components/common/Table/TableConstructor.scss
+++ b/src/components/common/Table/TableConstructor.scss
@@ -4,6 +4,43 @@
   width: fit-content;
   font-family: "Roboto";
   overflow-y: auto;
+  .popup-box {
+    position: fixed;
+    background: #00000050;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    .box {
+      position: relative;
+      width: 70%;
+      margin: 0 auto;
+      height: auto;
+      max-height: 70vh;
+      margin-top: calc(100vh - 85vh - 20px);
+      background: #fff;
+      border-radius: 4px;
+      padding: 20px;
+      border: 1px solid #999;
+      overflow: auto;
+    }
+
+    .close-icon {
+      content: "x";
+      cursor: pointer;
+      position: fixed;
+      right: calc(15% - 30px);
+      top: calc(100vh - 85vh - 33px);
+      background: #ededed;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      line-height: 20px;
+      text-align: center;
+      border: 1px solid #999;
+      font-size: 20px;
+    }
+  }
   .tableName {
     height: 26px;
     font-size: 12px;
@@ -81,20 +118,20 @@
   }
 
   width: 100%;
-  .small {
-    height: 96px;
-    width: 100%;
-  }
-  .medium {
-    height: 160px;
-    width: 100%;
-  }
-  .large {
-    height: 320px;
-    width: 100%;
-  }
-  .xlarge {
-    height: 545px;
-    width: 100%;
-  }
+  // .small {
+  //   height: 96px;
+  //   width: 100%;
+  // }
+  // .medium {
+  //   height: 160px;
+  //   width: 100%;
+  // }
+  // .large {
+  //   height: 320px;
+  //   width: 100%;
+  // }
+  // .xlarge {
+  //   height: 545px;
+  //   width: 100%;
+  // }
 }
