--- a/src/components/common/Table/TableConstructor.scss
+++ b/src/components/common/Table/TableConstructor.scss
@@ -6,7 +6,7 @@
   overflow-y: auto;
   .popup-box {
     position: fixed;
-    background: #00000050;
+    background: rgba($color: #8d8d8d, $alpha: 0.3);
     width: 100%;
     height: 100vh;
     top: 0;
@@ -19,26 +19,36 @@
       max-height: 70vh;
       margin-top: calc(100vh - 85vh - 20px);
       background: #fff;
-      border-radius: 4px;
-      padding: 20px;
-      border: 1px solid #999;
       overflow: auto;
-    }
-
-    .close-icon {
-      content: "x";
-      cursor: pointer;
-      position: fixed;
-      right: calc(15% - 30px);
-      top: calc(100vh - 85vh - 33px);
-      background: #ededed;
-      width: 25px;
-      height: 25px;
-      border-radius: 50%;
-      line-height: 20px;
-      text-align: center;
-      border: 1px solid #999;
-      font-size: 20px;
+      border-radius: 4px;
+      .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #cad4e3;
+        height: 26px;
+        padding: 0 10px;
+        color: white;
+        font-size: 14px;
+        .x-button {
+          cursor: pointer;
+        }
+      }
+      .content {
+        height: 96px;
+        .small {
+          height: 96px;
+        }
+        .medium {
+          height: 160px;
+        }
+        .large {
+          height: 320px;
+        }
+        .xlarge {
+          height: 545px;
+        }
+      }
     }
   }
   .tableName {
@@ -118,20 +128,4 @@
   }
 
   width: 100%;
-  // .small {
-  //   height: 96px;
-  //   width: 100%;
-  // }
-  // .medium {
-  //   height: 160px;
-  //   width: 100%;
-  // }
-  // .large {
-  //   height: 320px;
-  //   width: 100%;
-  // }
-  // .xlarge {
-  //   height: 545px;
-  //   width: 100%;
-  // }
 }
