--- a/src/components/common/Table/TableConstructor.scss
+++ b/src/components/common/Table/TableConstructor.scss
@@ -4,51 +4,66 @@
   width: fit-content;
   font-family: "Roboto";
   overflow-y: auto;
-  .popup-box {
+
+  .overlay {
+    background-color: rgba($color: #8d8d8d, $alpha: 0.3);
     position: fixed;
-    background: rgba($color: #8d8d8d, $alpha: 0.3);
-    width: 100%;
-    height: 100vh;
+    opacity: 0;
+    transition: 200ms ease-in-out;
     top: 0;
     left: 0;
-    .box {
-      position: relative;
-      width: 70%;
-      margin: 0 auto;
-      height: auto;
-      max-height: 70vh;
-      margin-top: calc(100vh - 85vh - 20px);
-      background: #fff;
-      overflow: auto;
-      border-radius: 4px;
-      .header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background-color: #cad4e3;
-        height: 26px;
-        padding: 0 10px;
-        color: white;
-        font-size: 14px;
-        .x-button {
-          cursor: pointer;
-        }
+    right: 0;
+    bottom: 0;
+    pointer-events: none;
+  }
+  .overlay.active {
+    opacity: 1;
+    pointer-events: all;
+  }
+  .box.active {
+    transform: translate(-50%, -50%) scale(1);
+  }
+  .box {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    border-radius: 4px;
+    z-index: 100;
+    background-color: white;
+    min-width: 70%;
+    width: fit-content;
+    max-width: 100%;
+
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: #cad4e3;
+      height: 26px;
+      padding: 0 10px;
+      color: white;
+      font-size: 14px;
+      .x-button {
+        cursor: pointer;
       }
-      .content {
-        height: 96px;
-        .small {
-          height: 96px;
-        }
-        .medium {
-          height: 160px;
-        }
-        .large {
-          height: 320px;
-        }
-        .xlarge {
-          height: 545px;
-        }
-      }
+    }
+    .content {
+      padding: 1rem;
+      overflow: scroll;
+    }
+    .content.small {
+      height: 96px;
+    }
+    .content.medium {
+      height: 160px;
+    }
+    .content.large {
+      height: 320px;
+    }
+    .content.xlarge {
+      height: 545px;
     }
   }
   .tableName {
