--- a/src/components/table/Table.scss
+++ b/src/components/table/Table.scss
@@ -6,10 +6,12 @@ $border-color: #f9f9f9;
   }
 }
 .Table {
+  position: relative;
   margin: 1em;
   border: solid 0.1em #4a5f84;
   padding: 0.5em;
   width: fit-content;
+  min-width: 20em;
   font-family: "Roboto";
 
   .Name {
@@ -87,6 +89,68 @@ $border-color: #f9f9f9;
         width: 10.1em;
         color: #464646;
         border: solid 0.1em rgba($color: white, $alpha: 0);
+      }
+    }
+  }
+  .HeaderPopup {
+    .HeaderText {
+      font-size: 0.8em;
+      width: 10em;
+      line-height: 0.8em;
+      letter-spacing: 0.01em;
+      color: #bdbdbd;
+    }
+    .HeaderPopupContent {
+      display: grid;
+      grid-column-gap: 1em;
+
+      .HeaderContainer {
+        cursor: pointer;
+        font-size: 1.2em;
+        display: flex;
+        align-items: center;
+        color: #646464;
+        margin: 0.3em 0;
+        width: 7em;
+        padding: 0.2em;
+        background: #f9f9f9;
+        box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.1);
+        border-radius: 0.2em;
+        .text {
+          padding: 0 0.5em;
+          line-height: 1.2em;
+          letter-spacing: 0.01em;
+          cursor: pointer;
+        }
+      }
+      .HeaderContainer:hover {
+        background-color: #f4f4f4;
+      }
+    }
+    .HeaderPopupFooter {
+      display: flex;
+      justify-content: center;
+      font-weight: bold;
+      padding: 0.5em;
+      line-height: 1.4em;
+      padding-bottom: 0;
+
+      .CancelButton {
+        padding: 0.5em 1em;
+        opacity: 0.6;
+        cursor: pointer;
+        border-radius: 0.4em;
+      }
+      .SaveButton {
+        cursor: pointer;
+        padding: 0.5em 2em;
+        opacity: 0.6;
+        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 0.4em;
+      }
+      .SaveButton:hover,
+      .CancelButton:hover {
+        background-color: #f4f4f4;
       }
     }
   }
